--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/index.html
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/index.html
@@ -62,6 +62,7 @@
 
     <script src="scripts/recorder.js"></script>
     <script src="scripts/main.js"></script>
+
     <style>
         html {
             overflow: hidden;
@@ -81,8 +82,7 @@
             display: inline-block;
             background: #202020;
             width: 95%;
-            height: 45%;
-            box-shadow: 0px 0px 10px blue;
+            height: 65%;
         }
 
         #controls {
@@ -98,12 +98,12 @@
             height: 15vh;
         }
 
-        #record.recording {
-            background: red;
-            background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
-            background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
-            background: radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
-        }
+            #record.recording {
+                background: red;
+                background: -webkit-radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
+                background: -moz-radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
+                background: radial-gradient(center, ellipse cover, #ff0000 0%, lightgrey 75%, lightgrey 100%, #7db9e8 100%);
+            }
 
         #save, #save img {
             height: 10vh;
@@ -113,17 +113,19 @@
             opacity: 0.25;
         }
 
-        #save[download] {
-            opacity: 1;
-        }
+            #save[download] {
+                opacity: 1;
+            }
 
         #viz {
-            height: 80%;
+            height: 100%;
             width: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
+            bottom: 0px;
+            position: fixed;
         }
 
         @media (orientation: landscape) {
@@ -136,13 +138,9 @@
                 height: 100%;
                 width: 10%;
             }
-
-            #viz {
-                height: 100%;
-                width: 90%;
-            }
         }
     </style>
+
 </head>
 <body>
     <div id="viz">
