Changed URL for controller

--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/index.html
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/index.html
@@ -31,7 +31,8 @@
 
         function uploadBlob(blobData) {
 
-            var url = "/api/values/Upload?currentMeetingId=" + currentMeetingId;
+            //var url = "/api/values/Upload?currentMeetingId=" + currentMeetingId;
+            var url = "http://meetassistantservice.azurewebsites.net/api/values/Upload?currentMeetingId=" + currentMeetingId;
 
             $.ajax({
                 url: url,
